--- a/pyGMCA/scripts/rgmca/script_rgmca.ipynb
+++ b/pyGMCA/scripts/rgmca/script_rgmca.ipynb
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -207,7 +207,39 @@
       "PCP+GMCA, current best error: 0.00460129088887 at index 5 th index in  145 iterations\n",
       "PCP+GMCA, current best error: 0.00108408183336 at index 6 th index in  118 iterations\n",
       "PCP+GMCA, current best error: 0.000544719684335 at index 7 th index in  184 iterations\n",
-      "Errors PCP+GMCA:  8.0 recovered columns,  0.000544719684335  for DeltaA\n"
+      "Errors PCP+GMCA:  8.0 recovered columns,  0.000544719684335  for DeltaA\n",
+      "Beta-div.: current best result:  0.0444246388561 at beta= 0.005+ 0.002* 1 in  78  iterations\n",
+      "Beta-div.: current best result:  0.00771789518599 at beta= 0.005+ 0.002* 2 in  19  iterations\n",
+      "Beta-div.: current best result:  0.00615297861829 at beta= 0.005+ 0.002* 3 in  10  iterations\n",
+      "Beta-div.: current best result:  0.00592642292038 at beta= 0.005+ 0.002* 4 in  10  iterations\n",
+      "exit at  5 th index\n",
+      "Errors beta-div.:  0.0 recovered columns,  0.00592642292038  for DeltaA\n",
+      "Start for the  3 th parameter\n",
+      "Start for the  1 th job\n",
+      "Errors AMCA:  8.0 recovered columns,  0.000133364850963  for DeltaA\n",
+      "Errors GMCA:  0.0 recovered columns,  0.114665401563  for DeltaA\n",
+      "rAMCA terminates in  3  iterations\n",
+      "Errors rAMCA:  8.0 recovered columns,  0.000128199732033  for DeltaA\n",
+      "rGMCA terminates in  5  iterations\n",
+      "Errors rGMCA:  8.0 recovered columns,  0.000475309787229  for DeltaA\n",
+      "PCP+GMCA, current best error: 0.230696076794 at index 0 th index in  121 iterations\n",
+      "PCP+GMCA, current best error: 0.0473218115136 at index 3 th index in  207 iterations\n",
+      "PCP+GMCA, current best error: 0.0114995765655 at index 4 th index in  158 iterations\n",
+      "PCP+GMCA, current best error: 0.00264054994822 at index 5 th index in  204 iterations\n",
+      "PCP+GMCA, current best error: 0.00226175432263 at index 6 th index in  267 iterations\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-3-bcfe8ba26bdc>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     64\u001b[0m         \u001b[0;31m#PCP+GMCA#\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     65\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 66\u001b[0;31m         \u001b[0mSest\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mAest\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mOfin\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mpcpGMCA\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mAori\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mS\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mA\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcopy\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     67\u001b[0m         \u001b[0mangle5P\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mindexParam\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mindexIte\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m,\u001b[0m\u001b[0mdeltaP\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mindexParam\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mindexIte\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m\u001b[0merrors\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mAest\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mSest\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mAori\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mS\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     68\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mpS\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'verbosePCP'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/Users/jbobin/Documents/Python/LENA_DEVL/Toolbox/BSS/pyGMCALab/pyGMCA/bss/rgmca/rpcaAlgo.pyc\u001b[0m in \u001b[0;36mpcpGMCA\u001b[0;34m(M, Aori, Sori, Aini)\u001b[0m\n\u001b[1;32m     71\u001b[0m                 \u001b[0mL_\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mL\u001b[0m\u001b[0;31m#low-rank\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     72\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 73\u001b[0;31m                 \u001b[0mL\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mS\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mupdateL\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmu\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mM\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mO\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mY\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;31m# update of the low-rank term\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     74\u001b[0m                 \u001b[0mO\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mupdateO\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mLambda\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mmu\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mM\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mL\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mY\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m# update of the outliers\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     75\u001b[0m                 \u001b[0mY\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mY\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0mmu\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mM\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0mL\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0mO\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m#update Y, the Lagrange multiplier  matrix\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/Users/jbobin/Documents/Python/LENA_DEVL/Toolbox/BSS/pyGMCALab/pyGMCA/bss/rgmca/rpcaAlgo.pyc\u001b[0m in \u001b[0;36mupdateL\u001b[0;34m(mu, M, O, Y)\u001b[0m\n\u001b[1;32m    134\u001b[0m     \u001b[0mSinv\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mS\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcopy\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    135\u001b[0m     \u001b[0mSinv\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mS\u001b[0m\u001b[0;34m>\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1.\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0mS\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mS\u001b[0m\u001b[0;34m>\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 136\u001b[0;31m     \u001b[0mV\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mSinv\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mT\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mUT\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mM\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0mO\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0mY\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0;36m1.\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0mmu\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m#To perform the reconstruction of L\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    137\u001b[0m     \u001b[0mS\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0msoftThres\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mS\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m1.\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmu\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;31m# Threshold of the eigenvalue\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    138\u001b[0m     \u001b[0mL\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mU\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mS\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mV\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m# estimation of L\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
